test/Fail/UnquoteTermNothing.agda
-- Andreas, 2024-09-27

_ : Set
_ = unquote

-- `unquote' must be applied to a term
-- when checking that the expression unquote has type Set
