test/Fail/UnquoteTermNothing.err
UnquoteTermNothing.agda:4.5-12: error: [Unquote.NakedUnquote]
'unquote' must be applied to a term
when checking that the expression unquote has type Set
